[package]
name = "enzyme-sys"
authors = ["Martin Robinson <martinjrobins@gmail.com>"]
description = "sys crate for Enzyme AD C api."
repository = "https://github.com/martinjrobins/enzyme-sys"
keywords = ["llvm", "enzyme"]
version = "0.1.0"
categories = ["development-tools::ffi"]
edition = "2021"
readme = "README.md"
license = "MIT"

[dependencies]
llvm-sys = { version = "*" }

[build-dependencies]
bindgen = "0.69.4"
cmake = "0.1.50"
